--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
-project({PROJECT_NAME})
+project(BmpPP)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library({PROJECT_NAME}
+add_library(BmpPP
 
 )
 
