Added submodule eule

--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -3,7 +3,10 @@ project(BmpPP)
 
 set(CMAKE_CXX_STANDARD 17)
 
+ADD_COMPILE_DEFINITIONS(_EULE_NO_INTRINSICS_)
+INCLUDE_DIRECTORIES(./Eule/)
+FILE(GLOB Eule ./Eule/Eule/*.cpp)
+
 add_library(BmpPP
-
+    ${Eule}
 )
-
