Added unit test for re-initialization

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -3,15 +3,21 @@ project(Test)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(../Src)
-link_directories(../Src/cmake-build-debug)
+ADD_COMPILE_DEFINITIONS(_EULE_NO_INTRINSICS_)
+
+INCLUDE_DIRECTORIES(../Src/Eule/)
+INCLUDE_DIRECTORIES(../Src/)
+
+FILE(GLOB Eule ../Src/Eule/Eule/*.cpp)
+FILE(GLOB BmpPP ../Src/*.cpp)
 
 add_executable(Test
+        ${Eule}
+        ${BmpPP}
+
         Catch2.h
         main.cpp
 
         BmpHeader.cpp
+        ReInitialize.cpp
 )
-
-target_link_libraries(Test BmpPP)
-
