Added Read method

--- a/Exec/CMakeLists.txt
+++ b/Exec/CMakeLists.txt
@@ -4,6 +4,7 @@ project(BmpPP_exec)
 set(CMAKE_CXX_STANDARD 17)
 
 ADD_COMPILE_DEFINITIONS(_EULE_NO_INTRINSICS_)
+ADD_COMPILE_DEFINITIONS(_BMPLIB_DEBUG_OUTPUT_)
 
 INCLUDE_DIRECTORIES(../Src/Eule/)
 INCLUDE_DIRECTORIES(../Src/)
