--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# All images
+*.bmp
+*.jpg
+*.jpeg
+*.png
+
 # Vim swap files
 *.swp
 
