Added tests for write, and added tests/implementation of operator==. Also added implementation of FillChannel()

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -22,6 +22,8 @@ add_executable(Test
         ReInitialize.cpp
         Uninitialized.cpp
         Read.cpp
+        Write.cpp
+        OperatorEquals.cpp
 )
 
 # Move test images to build dir
