Added tests for SwapChannels

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(Test
         FillChannel.cpp
         MirrorHorizontally.cpp
         MirrorVertically.cpp
+        SwapChannels.cpp
 )
 
 # Move test images to build dir
