Added implementation of Rotation methods, and tests

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(Test
         MirrorHorizontally.cpp
         MirrorVertically.cpp
         SwapChannels.cpp
+        Rotate.cpp
 )
 
 # Move test images to build dir
