Added implementatino of color conversion method, and added tests

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(Test
         MirrorVertically.cpp
         SwapChannels.cpp
         Rotate.cpp
+        ConvertColormode.cpp
 )
 
 # Move test images to build dir
